--- a/localisation/english/MD_focus_ARM_l_english.yml
+++ b/localisation/english/MD_focus_ARM_l_english.yml
@@ -1807,7 +1807,7 @@
  armenia.8.a: "Sure, sure..."
  armenia.9.t: "Velvet Revolution"
  armenia.9.d: "From a series of political protests in Armenia, the reactionary so called 'conservative' party of Armenia led by Serzh Sargsyan has stepped down and let the people to elect Nikol Pashinyan into office who has pledged to destroy the rampant corruption which plagues Armenia and improve its economical situation and stop the mass emigration."
- armenia.9.a: "Duxov!"
+ armenia.9.a: "Dukhov!"
 
  #ProWestern Stuff
  arm_prowest.1000.t: "Peace at last!"
