--- a/localisation/english/MD_focus_ARM_l_english.yml
+++ b/localisation/english/MD_focus_ARM_l_english.yml
@@ -425,8 +425,8 @@
  ARM_support_for_volunteers_desc: "Armenian Legion"
  ARM_american_legion: "Armenian Legion of America"
  ARM_american_legion_desc: "Armenian Legion of America is an organization which includes Armenians who served in the US military in the past. The Legion intends to fight against the enemies of the Armenian people. The organization also has small special teams of five who receive secret training under the guidance of former US Army Marine Corps officers. There are already more than a thousand fighters in the Armenian Legion - young people of Armenian origin. We should support their cause and include them as a military branch."
- ARM_millitarism: "Millitarism"
- ARM_millitarism_desc: "Militarism is the belief or the desire of a government or a people that a state should maintain a strong military capability and to use it aggressively to expand national interests and/or values. It may also imply the glorification of the military and of the ideals of a professional military class and the predominance of the armed forces in the administration or policy of the state"
+ ARM_militarism: "Militarism"
+ ARM_militarism_desc: "Militarism is the belief or the desire of a government or a people that a state should maintain a strong military capability and to use it aggressively to expand national interests and/or values. It may also imply the glorification of the military and of the ideals of a professional military class and the predominance of the armed forces in the administration or policy of the state"
  ARM_russia3: "Union Russia"
  ARM_russia3_desc: "Russsia will surely never aid our expansion with troops, but they would never also stop us from doing that. Knowing that a new conflict may appear, they would more likely sell us weapons and provide equipment aid as they always did."
  ARM_kurds2: "Allied Kurds"
@@ -883,19 +883,19 @@
  ARM_arovodi_question: "Arevordi Question"
  ARM_arovodi_question_desc: "Armenian neo-pagan movement is thriving since our empowerment in the government. We need to decide their fate."
  ARM_zapret_propovedovat: "Crush Neo-Pagans"
- ARM_zapret_propovedovat_desc: "Neo-Paganist political movements need to be banned and restricted. They pose direct threat to us."
+ ARM_zapret_propovedovat_desc: "Neo-Paganism political movements need to be banned and restricted. They pose direct threat to us."
  ARM_kompromis: "Compromise with Neo-Pagans"
- ARM_kompromis_desc: "Arevordi faith's political movements are pure in their intentions and we need to repsect and work together."
+ ARM_kompromis_desc: "Arevordi faith's political movements are pure in their intentions and we need to respect and work together."
  ARM_konwekt_esidow: "Convert Yazidis"
  ARM_konwekt_esidow_desc: "Yazidis and Armenians have long relationships. They are well integrated into our society. We need to send our ministries to try to convert them into our faith."
- ARM_allow_esid: "Tolerate Yazidizm"
- ARM_allow_esid_desc: "Yazidis and Armenians are both inheritors of mutual arevordi past. We need to respect each other's religioins and continue harmonious existence."
+ ARM_allow_esid: "Tolerate Yazidism"
+ ARM_allow_esid_desc: "Yazidis and Armenians are both inheritors of mutual arevordi past. We need to respect each other's religions and continue harmonious existence."
  ARM_integrat_gruzin: "Integration of Georgia"
  ARM_integrat_gruzin_desc: "Georgia is now subjugated and we need to decide what to do."
  ARM_religion_autonomy: "Religious Autonomy"
- ARM_religion_autonomy_desc: "Georgian Orthodox Church must berespected, as it is the basis of georgian identity, apart from ethnic differences."
+ ARM_religion_autonomy_desc: "Georgian Orthodox Church must be respected, as it is the basis of georgian identity, apart from ethnic differences."
  ARM_church_reforms: "Reform Georgian Church"
- ARM_church_reforms_desc: "We must bring back the Georgian Orthodox Church back into miaphysistism."
+ ARM_church_reforms_desc: "We must bring back the Georgian Orthodox Church back into miaphysitism."
  ARM_discuss_of_union: "Discussion of Union"
  ARM_georgian_langua: "Allow Georgian language"
  ARM_georgian_langua_desc: "Georgian language must be the only language in our new province. This will foster cultural acceptance between us."
@@ -923,11 +923,11 @@
  ARM_teeth_for_teeth: "Teeth for teeth"
  ARM_hand_for_hand: "Hand for hand"
  ARM_razum_wariantus: "Reasonable solution"
- ARM_razum_wariantus_desc: "We will deport all turkish nationalism propagandists and support the discoveries of true identity."
+ ARM_razum_wariantus_desc: "We will deport all turkish nationalism propaganda and support the discoveries of true identity."
  ARM_deportation_nejelatel: "Deportation and adaptation"
  ARM_deportation_nejelatel_desc: "Those who still oppose our liberation must be deported and massive armenian propaganda must be established."
- ARM_kriptoarm: "Integration of Cryptoarmenians"
- ARM_kriptoarm_desc: "Most of the Turkish people are assimilated Armenians or Greeks. We need to foster the discovery of the true hritage of these people and support armenian identity."
+ ARM_kriptoarm: "Integration of Crypto Armenians"
+ ARM_kriptoarm_desc: "Most of the Turkish people are assimilated Armenians and Greeks. We need to foster the discovery of the true heritage of these people and support armenian identity."
  ARM_assimilation_program: "Integrate them"
  ARM_assimilation_program_desc: "We will show turkish people the true way of living without fascist ties of the Turkish state."
  ARM_rekrest_tur: "Religious conversion programs"
@@ -945,7 +945,7 @@
  ARM_arm_syria: "Bring back Syria"
  ARM_arm_syria_desc: "Syria must be brought back to us!"
  ARM_urartu_iran: "Bring back crown of Shah'n'shah"
- ARM_urartu_iran_desc: "Tigranes the Great in all his mightyness, had the crown of Shah'n'shah. We shall bring it back!"
+ ARM_urartu_iran_desc: "Tigranes the Great in all his mightiness, has the crown of Shahenshah. We shall bring it back!"
  ARM_arm_palestine: "Conquer the Land Of Judea"
  ARM_arm_palestine_desc: "Our religious places are all located in the holy land, which we must bring back."
  ARM_arm_kurd: "Conquer Babylon and Krdq"
