--- a/localisation/english/MD_focus_ARM_l_english.yml
+++ b/localisation/english/MD_focus_ARM_l_english.yml
@@ -983,7 +983,7 @@
  ARM_proval_barhat_revol: "Fail of Velvet Revolution"
  ARM_unloyaly_military: "Deal with unloyal military"
  ARM_fast_reforms: "Fast reforms"
- ARM_fast_reforms_desc: "Fast reforms must be conducted to refresh Armenian political and buerocratic apparatus."
+ ARM_fast_reforms_desc: "Fast reforms must be conducted to refresh Armenian political and bureaucratic apparatus."
  ARM_oligarhs: "Vassalize the Oligarchs"
  ARM_arest: "Arrest"
  ARM_arest_desc: "The old guard of oligarchs must be put in jail. They are all criminals and they deserve it."
@@ -994,7 +994,7 @@
  ARM_new_politic_desc: "Armenia is not the old, rusty country anymore. Thus the new democratic political way is the way to go for us!"
  ARM_politc_crisis: "Armenian Political Crisis"
  ARM_grzo: "Patronization from Grzo"
- ARM_grzo_desc: "Grzo is one of the few ideologically democratical oligarchs in our country. We must get support from him."
+ ARM_grzo_desc: "Grzo is one of the few ideologically democratic oligarchs in our country. We must get support from him."
  ARM_ideal_armenia: "Our Ideal Armenia"
  ARM_ideal_armenia_desc: "Now, our establishmnet has fully formed. We need to build an ideal Armenia!"
  ARM_kocharyan_again: "Support Robo-Serzh Alliance"
@@ -1009,7 +1009,7 @@
  ARM_weaken_mil: "Political Military"
  ARM_weaken_mil_desc: "Military is full of Generals that are not loyal to the new establishment or fully corrupt. We must cleanse the military from them."
  ARM_pseudo_liberal: "Continue the course"
- ARM_pseudo_liberal_desc: "Our social policies that were stated in our party's program, must be enlargened and continued."
+ ARM_pseudo_liberal_desc: "Our social policies that were stated in our party's program, must be enlarged and continued."
  ARM_violentprotesting: "Violent Protesting"
  ARM_peacefulprotesting: "Peaceful Protesting"
  ARM_stroy_total: "Pashinyan's State"
@@ -1019,7 +1019,7 @@
  ARM_razgon_oppos: "Crush the Opposition"
  ARM_razgon_oppos_desc: "We must prohibit any political meetings or protests. It is all the conspiracy of the old government!"
  ARM_razresh_oppos: "Allow the Opposition"
- ARM_razresh_oppos_desc: "First and foremost we are a democratic government. We must allow any protests or metting until they are violent."
+ ARM_razresh_oppos_desc: "First and foremost we are a democratic government. We must allow any protests or meeting until they are violent."
  ARM_roboserzh_revol: "Anti-revolutionary Revolution"
  ARM_antiartsakh: "Anti-Artsakh Rhetoric"
  ARM_antiartsakh_desc: "We cannot get rid of Artsakh immediately, but it obvious, that Artsakh is the source of all problems in Armenia! We must install our man in Artsakh government and distance us from them."
@@ -1042,7 +1042,7 @@
  ARM_wid_na_zhitilestwo: "Residence for Foreigners"
  ARM_repatriation: "Repatriation effort"
  ARM_export_in_usa: "Export to USA"
- ARM_export_in_usa_desc: "Although our market is much smaller than the U.S's economy, we might attempt to etsblish trade relations and export pur products into Glendale."
+ ARM_export_in_usa_desc: "Although our market is much smaller than the U.S's economy, we might attempt to establish trade relations and export pur products into Glendale."
  ARM_kanadian_gold: "Canadian Gold"
  ARM_kanadian_gold_desc: "Canadian companies have been long interested in investing in mining industry of Armenia."
  ARM_full_embargo: "Full Embargo"
@@ -1100,7 +1100,7 @@
  ARM_AUA: "American University of Armenia"
  ARM_AUA_desc: "The American University of Armenia (AUA) (Armenian: Hayastani amerikyan hamalsaran) is a private, independent university in Yerevan, Armenia that is accredited by the Western Association of Schools and Colleges Senior College and University Commission. It is the first U.S.-accredited institution in the former Soviet Union that provides undergraduate and graduate education."
  ARM_new_vozmozh: "New Opportunities"
- ARM_new_vozmozh_desc: "We need to see what opprtunities now Armenia has for educational support."
+ ARM_new_vozmozh_desc: "We need to see what opportunities now Armenia has for educational support."
  ARM_new_ayb: "AYB School"
  ARM_new_ayb_desc: "Ayb School, is a private educational complex in Yerevan, Armenia, opened in 2011 by the Ayb Educational Foundation."
  ARM_tumo: "TUMO Creative Center"
