--- a/localisation/french/MD_tribute_ideas_l_french.yml
+++ b/localisation/french/MD_tribute_ideas_l_french.yml
@@ -95,7 +95,7 @@
  GNC_tribute: "Exploitation économique par [GNC.GetName]"
  GRA_tribute: "Exploitation économique par [GRA.GetName]"
  GRE_tribute: "Exploitation économique par [GRE.GetName]"
- GRL_tribute: "Exploitation économique par [GRL.GetName]"
+ GRN_tribute: "Exploitation économique par [GRN.GetName]"
  GUA_tribute: "Exploitation économique par [GUA.GetName]"
  GUB_tribute: "Exploitation économique par [GUB.GetName]"
  GUI_tribute: "Exploitation économique par [GUI.GetName]"
