--- a/localisation/english/MD_focus_BOT_l_english.yml
+++ b/localisation/english/MD_focus_BOT_l_english.yml
@@ -67,7 +67,7 @@
  BOT_school_fees_desc: "We have re-introduced school fees into the country to combat rising costs of education"
  BOT_school_fees_tt: "Education Spending: §G-10%§!"
  BOT_found_BIUST_research_boost: "Botswana International University of Technology"
- BOT_found_BIUST_research_boost_desc: "BIUST has been found to improve education opportunities in Botswana and focus on researching new technologies."
+ BOT_found_BIUST_research_boost_desc: "BIUST has been founded to improve education opportunities in Botswana and focus on researching new technologies."
  BOT_found_UBSOM_research_boost: "University of Botswana Medical School"
  BOT_found_UBSOM_research_boost_desc: "The University of Botswana has been expanded with a medical department focused on healthcare training and AIDS research"
 
