--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -514,11 +514,11 @@
  ITA_further_protect_workers_rights_decision: "Improve Workers' Rights"
  ITA_further_protect_workers_rights_decision_desc: "Workers with indefinite duration contracts are already the most protected category in Italy, but they still are the biggest pool of voters together with retirees, so appeasing them is an easy vote-winning strategy to ensure our approval ratings stay high."
  ITA_further_protect_workers_rights_decision_repeal: "Roll back new Workers' Rights"
- ITA_ITA_modify_article_18: "Modify Article 18"
- ITA_ITA_modify_article_18_desc: "Article 18 of the Statute of Workers makes it extremely hard for employers to fire their employees and our jobs market has suffered accordingly. Modifying it will surely kickstart accusations of \"forced labor\" and \"slavery\" from the opposition, but it's only common sense in reality."
- ITA_ITA_modify_article_18_decision: "Modify Article 18"
- ITA_ITA_modify_article_18_decision_desc: "Article 18 of the Statute of Workers makes it extremely hard for employers to fire their employees and our jobs market has suffered accordingly. Modifying it will surely kickstart accusations of \"forced labor\" and \"slavery\" from the opposition, but it's only common sense in reality."
- ITA_ITA_modify_article_18_decision_repeal: "Roll back modifications of Article 18"
+ ITA_modify_article_18: "Modify Article 18"
+ ITA_modify_article_18_desc: "Article 18 of the Statute of Workers makes it extremely hard for employers to fire their employees and our jobs market has suffered accordingly. Modifying it will surely kickstart accusations of \"forced labor\" and \"slavery\" from the opposition, but it's only common sense in reality."
+ ITA_modify_article_18_decision: "Modify Article 18"
+ ITA_modify_article_18_decision_desc: "Article 18 of the Statute of Workers makes it extremely hard for employers to fire their employees and our jobs market has suffered accordingly. Modifying it will surely kickstart accusations of \"forced labor\" and \"slavery\" from the opposition, but it's only common sense in reality."
+ ITA_modify_article_18_decision_repeal: "Roll back modifications of Article 18"
  ITA_save_struggling_companies: "Save Struggling Companies"
  ITA_save_struggling_companies_desc: "Guaranteeing the survival of uncompetitive companies isn't cheap by any means, but workers and labour unions will surely remember who saved their jobs when elections arrive."
  ITA_save_struggling_companies_decision: "Save Struggling Companies"
