--- a/localisation/english/MD_focus_ITA_l_english.yml
+++ b/localisation/english/MD_focus_ITA_l_english.yml
@@ -1587,7 +1587,7 @@
  italy_md.66.t: "Free and Equal Party splits from the Democratic Party"
  italy_md.66.d: "Free and Equal is a left-wing party founded in 2007 by former anti-mafia magistrate Pietro Grasso after splitting from the Democratic Party, of which it represented most of its left-most wing. It is a socialist progressive party that strongly focuses on social, women and migrant rights and in fighting inequalities through government intervention."
  italy_md.66.o1: "Interesting"
- italy_md.67.t: "Summon a Respected Institunional Figure"
+ italy_md.67.t: "Summon a Respected Institutional Figure"
  italy_md.67.d: "Italy is facing a dire situation and we can't risk leaving the nation at the mercy of its incapable political class, a technocratic government must be formed so that what needs doing can be done without the shackles of political opportunism and ideological fanaticism. We only need to choose the right person for the job."
  italy_md.67.o1: "Mario Monti"
  italy_md.67.o2: "Mario Draghi"
