--- a/localisation/english/MD_custom_achievements_l_english.yml
+++ b/localisation/english/MD_custom_achievements_l_english.yml
@@ -7,9 +7,9 @@
  started_millennium_dawn_NAME: "A Modern Step"
  started_millennium_dawn_DESC: "Thank you for playing Millennium Dawn! Make sure you stick with us!"
  conquer_taiwan_as_china_NAME: "Conquer Taiwan"
- conquer_taiwan_as_china_DESC: "Conquer Taiwan as the People's Republic of China. The island will be ours once more."
+ conquer_taiwan_as_china_DESC: "Conquer Taiwan as the People's Republic of China. There are not two suns in the sky."
  annex_mongolia_as_china_NAME: "Annex Mongolia"
- annex_mongolia_as_china_DESC: "Annex Mongolia as the People's Republic of China. The prairie will be ours once more."
+ annex_mongolia_as_china_DESC: "Annex Mongolia as the People's Republic of China. The steppes are united again under our banner."
  control_south_sea_as_china_NAME: "China South Sea"
  control_south_sea_as_china_DESC: "Control all the islands of the South China Sea as the People's Republic of China. The nine dash will prevail."
  reclaim_ambazonia_NAME: "Reclaim Ambazonia"
@@ -21,7 +21,7 @@
  take_back_western_sahara_NAME: "Reclaim Western Sahara"
  take_back_western_sahara_DESC: "Take back Western Sahara from the Moroccoans"
  take_back_the_breakaways_NAME: "Return Abkhazia and South Ossetia"
- take_back_the_breakaways_DESC: "The republic of Abkhazia should return to Georgia."
+ take_back_the_breakaways_DESC: "Abkhazia and South Ossetia should return to Georgia."
  end_the_angolan_civil_war_NAME: "End the Angolan Civil War"
  end_the_angolan_civil_war_DESC: "End the Angolan civil war as one of the factions."
  end_the_somali_civil_war_NAME: "End the Somali Civil War"
