mex tree naming
naming industry and economy branches accordingly

--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -1567,6 +1567,438 @@ MEX_condor_strike: "Condor Strike"
 MEX_condor_strike_desc: ""
 
 
+### MEXICAN ECONOMY ###
+
+MEX_economia_mexicana: "Economia Mexicana"
+MEX_economia_mexicana_desc: ""
+MEX_national_infrastructure_program: "National Infrastructure Program"
+MEX_national_infrastructure_program_desc: ""
+MEX_cicsa: "CICSA"
+MEX_cicsa_desc: ""
+MEX_high_specification_highways: "High Specification Highways"
+MEX_high_specification_highways_desc: ""
+MEX_innovative_construction_procedures: "Innovative Construction Proceadures"
+MEX_innovative_construction_procedures_desc: ""
+MEX_north_arch: "North Arch"
+MEX_north_arch_desc: ""
+MEX_tepic_villa_union_highway: "Tepic Villa Union Highway"
+MEX_tepic_villa_union_highway_desc: ""
+MEX_northeast_bypass_of_the_city_of_toluca: "Northeast Bypass of the City of Toluca"
+MEX_northeast_bypass_of_the_city_of_toluca_desc: ""
+MEX_the_mazatlan_matamoros_corridor: "Mazatlan Matamoros Corridor"
+MEX_the_mazatlan_matamoros_corridor_desc: ""
+MEX_the_manzanillo_tampico_corridor: "The Manzanillo Tampico Corridor"
+MEX_the_manzanillo_tampico_corridor_desc: ""
+MEX_the_pacific_coastline_corridor: "The Pacific Coastline Corridor"
+MEX_the_pacific_coastline_corridor_desc: ""
+MEX_the_gulf_coastline_corridor: "The Gulf Coastline Corridor"
+MEX_the_gulf_coastline_corridor_desc: ""
+MEX_pan_american_highway: "Pan American Highway"
+MEX_pan_american_highway_desc: ""
+MEX_mexico_citis_circuito_exterior: "Mexico City's Circuito Exterior"
+MEX_mexico_citis_circuito_exterior_desc: ""
+MEX_tren_maya: "Tren Maya"
+MEX_tren_maya_desc: ""
+MEX_flood_prevention_projects: "Flood Prevention Projects"
+MEX_flood_prevention_projects_desc: ""
+MEX_calle_verde: "Calle Verde"
+MEX_calle_verde_desc: ""
+MEX_la_caledra_pumping_station: "La Caledra Pumping Station"
+MEX_la_caledra_pumping_station_desc: ""
+MEX_los_pilares_bicentenario: "Los Pilares Bicentenarios"
+MEX_los_pilares_bicentenario_desc: ""
+MEX_east_emitter_tunnel: "East Emitter Tunnel"
+MEX_east_emitter_tunnel_desc: ""
+MEX_flood_control_in_rural_areas: "Flood Control in Rural Areas"
+MEX_flood_control_in_rural_areas_desc: ""
+MEX_flood_control_in_urban_areas: "Flood Control in Urban Areas"
+MEX_flood_control_in_urban_areas_desc: ""
+MEX_eradicating_the_problem: "Eradicating the Problem"
+MEX_eradicating_the_problem_desc: ""
+MEX_national_digital_strategy: "National Digital Strategy"
+MEX_national_digital_strategy_desc: ""
+MEX_competition_among_internet_providers: "Competition Among Internet Providers"
+MEX_competition_among_internet_providers_desc: ""
+MEX_state_investments_into_cemex: "State Investments into Cemex"
+MEX_state_investments_into_cemex_desc: ""
+MEX_eccommerce_taxation: "eCommerce Taxation"
+MEX_eccommerce_taxation_desc: ""
+MEX_lowering_the_cost_of_internet_services: "Lowering the Cost of Internet Services"
+MEX_lowering_the_cost_of_internet_services_desc: ""
+MEX_investments_into_satellite_connections: "Investments into Satellite Connections"
+MEX_investments_into_satellite_connections_desc: ""
+MEX_wireless_connection_investments: "Wireless Connection Investments"
+MEX_wireless_connection_investments_desc: ""
+MEX_ngo_group_founding: "NGO Group Founding"
+MEX_ngo_group_founding_desc: ""
+MEX_domestic_software_development: "Domestic Software Development"
+MEX_domestic_software_development_desc: ""
+MEX_mexican_startups: "Mexican Startups"
+MEX_mexican_startups_desc: ""
+MEX_mexican_neo_banking: "Mexican Neo Banking"
+MEX_mexican_neo_banking_desc: ""
+MEX_telmex: "TELMEX"
+MEX_telmex_desc: ""
+MEX_technology_advancements: "Technology Advancements"
+MEX_technology_advancements_desc: ""
+MEX_mexico_conectado: "Mexico Conectado"
+MEX_mexico_conectado_desc: ""
+MEX_digital_government_policy: "Digital Government Policy"
+MEX_digital_government_policy_desc: ""
+MEX_digitalizing_education: "Digitalizing Education"
+MEX_digitalizing_education_desc: ""
+MEX_monterrey_institute_of_technology_and_higher_education: "Monterrey Institute of Technology and Higher Education"
+MEX_monterrey_institute_of_technology_and_higher_education_desc: ""
+MEX_water_conservation_projects_conagua: "Water Conservation Projects / CONAGUA"
+MEX_water_conservation_projects_conagua_desc: ""
+MEX_conejos_medanos_aqueduct: "Conejos Medanos Aqueduct"
+MEX_conejos_medanos_aqueduct_desc: ""
+MEX_el_realito_dam: "El Realito Dam"
+MEX_el_realito_dam_desc: ""
+MEX_atotonilco_wastewater_treatment_plant: "Atotonilco Wastewater Treatment Plant"
+MEX_atotonilco_wastewater_treatment_plant_desc: ""
+MEX_picachos_dam: "Picachos Dam"
+MEX_picachos_dam_desc: ""
+MEX_la_libertad_dam: "La Libertad Dam"
+MEX_la_libertad_dam_desc: ""
+MEX_el_zapotillo: "El Zapotillo"
+MEX_el_zapotillo_desc: ""
+MEX_what_water_problem: "What Water Problem"
+MEX_what_water_problem_desc: ""
+MEX_self_sufficient_forestry_conafor: "Self Sufficient Forestry / CONAFOR"
+MEX_self_sufficient_forestry_conafor_desc: ""
+MEX_clear_out_deforestation: "Clear Out Deforestation"
+MEX_clear_out_deforestation_desc: ""
+MEX_sustainable_deforestation: "Sustainable Deforestation"
+MEX_sustainable_deforestation_desc: ""
+MEX_the_mexican_rubber_tree: "The Mexican Rubber Tree"
+MEX_the_mexican_rubber_tree_desc: ""
+MEX_prodeplan: "PRODEPLAN"
+MEX_prodeplan_desc: ""
+MEX_procymaf: "PROCYMAF"
+MEX_procymaf_desc: ""
+MEX_ecological_preservation_movements: "Ecological Preservation Movements"
+MEX_ecological_preservation_movements_desc: ""
+MEX_expand_forestry_employment: "Expand Forestry Employment"
+MEX_expand_forestry_employment_desc: ""
+MEX_combating_illegal_tree_poaching: "Combating Illegal Tree Poaching"
+MEX_combating_illegal_tree_poaching_desc: ""
+MEX_government_ownership: "Government Ownership"
+MEX_government_ownership_desc: ""
+MEX_community_ownership: "Community Ownership"
+MEX_community_ownership_desc: ""
+MEX_sedesol: "SEDESOL"
+MEX_sedesol_desc: ""
+MEX_prevalence_of_income_inequality: "Prevalence of Income Inequality"
+MEX_prevalence_of_income_inequality_desc: ""
+MEX_increasing_taxes_on_the_rich: "Increasing Taxes on the Rich"
+MEX_increasing_taxes_on_the_rich_desc: ""
+MEX_redistributing_the_wealth: "Redistributing the Wealth"
+MEX_redistributing_the_wealth_desc: ""
+MEX_raising_minimum_wage: "Raising Minimum Wage"
+MEX_raising_minimum_wage_desc: ""
+MEX_providing_social_pensions: "Providing Social Pensions"
+MEX_providing_social_pensions_desc: ""
+MEX_introducing_universal_healthcare: "Introducing Universal Healthcare"
+MEX_introducing_universal_healthcare_desc: ""
+MEX_increase_of_education_funding: "Increase of Education Funding"
+MEX_increase_of_education_funding_desc: ""
+MEX_moving_industries_down_south: "Moving Industries Down South"
+MEX_moving_industries_down_south_desc: ""
+MEX_increasing_support_of_small_businesses: "Increasing Support of Small Businesses"
+MEX_increasing_support_of_small_businesses_desc: ""
+MEX_stimulating_the_economy: "Stimulating the Economy"
+MEX_stimulating_the_economy_desc: ""
+MEX_domestic_support: "Domestic Support"
+MEX_domestic_support_desc: ""
+MEX_stabilizing_the_southern_states: "Stabilizing the Southern States"
+MEX_stabilizing_the_southern_states_desc: ""
+MEX_support_of_workers_rights: "Support of Workers Rights"
+MEX_support_of_workers_rights_desc: ""
+MEX_increase_of_employment_production: "Increase of Employment Production"
+MEX_increase_of_employment_production_desc: ""
+MEX_seeking_foreign_support: "Seeking Foreign Support"
+MEX_seeking_foreign_support_desc: ""
+MEX_american_investments_in_guerreo: "American Investments in Guerreo"
+MEX_american_investments_in_guerreo_desc: ""
+MEX_european_investments_in_chiapas: "European Investments in Chiapas"
+MEX_european_investments_in_chiapas_desc: ""
+MEX_scientific_exchanges: "Scientific Exchanges"
+MEX_scientific_exchanges_desc: ""
+MEX_combating_poverty: "Combating Poverty"
+MEX_combating_poverty_desc: ""
+MEX_foreign_income_sectors: "Foreign Income Sectors"
+MEX_foreign_income_sectors_desc: ""
+MEX_international_tourism_hub: "International Tourism Hub"
+MEX_international_tourism_hub_desc: ""
+MEX_build_up_of_tourism_sectors: "Build Up of Tourism Sectors"
+MEX_build_up_of_tourism_sectors_desc: ""
+MEX_expanding_visa_free_entrance: "Expanding Visa Free Entrance"
+MEX_expanding_visa_free_entrance_desc: ""
+MEX_expansion_of_tourism_infrastructure: "Expansion of Tourism Infrastructure"
+MEX_expansion_of_tourism_infrastructure_desc: ""
+MEX_development_of_beach_resorts: "Development of Beach Resorts"
+MEX_development_of_beach_resorts_desc: ""
+MEX_the_hotel_industry: "The Hotel Industry"
+MEX_the_hotel_industry_desc: ""
+MEX_cruise_industries: "Cruise Industries"
+MEX_cruise_industries_desc: ""
+MEX_promotion_of_historical_and_indigenous_sites: "Promotion of Historical and Indigenous Sites"
+MEX_promotion_of_historical_and_indigenous_sites_desc: ""
+MEX_major_expansions_to_airports: "Major Expansions to Airports"
+MEX_major_expansions_to_airports_desc: ""
+MEX_promoting_domestic_tourism: "Promoting Domestic Tourism"
+MEX_promoting_domestic_tourism_desc: ""
+MEX_tourism_in_chiapas: "Tourism in Chiapas"
+MEX_tourism_in_chiapas_desc: ""
+MEX_tourism_in_guerrero_oaxaca: "Tourism in Guerrero Oaxaca"
+MEX_tourism_in_guerrero_oaxaca_desc: ""
+MEX_tourism_to_mexico_city: "Tourism to Mexico City"
+MEX_tourism_to_mexico_city_desc: ""
+MEX_tourism_to_jalisco: "Tourism to Jalisco"
+MEX_tourism_to_jalisco_desc: ""
+MEX_tourism_in_yucatan: "Tourism in Yucatan"
+MEX_tourism_in_yucatan_desc: ""
+MEX_remittances: "Remittances"
+MEX_remittances_desc: ""
+MEX_expanding_formal_sectors: "Expanding Formal Sectors"
+MEX_expanding_formal_sectors_desc: ""
+MEX_middle_class_tax_cut: "Middle Class Tax Cut"
+MEX_middle_class_tax_cut_desc: ""
+MEX_appeasing_workforce_needs: "Appeasing Workforce Needs"
+MEX_appeasing_workforce_needs_desc: ""
+MEX_echo_in_mexico: "Echo in Mexico"
+MEX_echo_in_mexico_desc: ""
+MEX_major_automobile_manufacturer: "Major Automobile Manufacturer"
+MEX_major_automobile_manufacturer_desc: ""
+MEX_german_automakers: "German Automakers"
+MEX_german_automakers_desc: ""
+MEX_the_big_three: "The Big Three"
+MEX_the_big_three_desc: ""
+MEX_asian_manufacturers: "Asian Manufacturers"
+MEX_asian_manufacturers_desc: ""
+MEX_compas: "COMPAS"
+MEX_compas_desc: ""
+MEX_general_motors_headquarters: "General Motors Headquarters"
+MEX_general_motors_headquarters_desc: ""
+MEX_toyota_motor_manufacturing_de_baja_california: "Toyota Motor Manufacturing de Baja California"
+MEX_toyota_motor_manufacturing_de_baja_california_desc: ""
+MEX_expanding_assembly_plants: "Expanding Assembly Plants"
+MEX_expanding_assembly_plants_desc: ""
+MEX_dina_camiones: "Dina Camiones"
+MEX_dina_camiones_desc: ""
+MEX_financial_sector: "Financial Sector"
+MEX_financial_sector_desc: ""
+MEX_foreign_owned_banking: "Foreign Owned Banking"
+MEX_foreign_owned_banking_desc: ""
+MEX_banamex_acquisition: "Banamex Acquisition"
+MEX_banamex_acquisition_desc: ""
+MEX_gradual_liberalization: "Gradual Liberalization"
+MEX_gradual_liberalization_desc: ""
+MEX_enhanced_regulatory_oversight: "Enhanced Regulatory Oversight"
+MEX_enhanced_regulatory_oversight_desc: ""
+MEX_nationalize_the_banks: "Nationalize the Banks"
+MEX_nationalize_the_banks_desc: ""
+MEX_state_acquisition_of_shares: "State Acquisition of Shares"
+MEX_state_acquisition_of_shares_desc: ""
+MEX_creating_state_owned_banks: "Creating State Owned Banks"
+MEX_creating_state_owned_banks_desc: ""
+MEX_loosening_government_regulations: "Loosening Government Regulations"
+MEX_loosening_government_regulations_desc: ""
+MEX_bancomer: "Bancomer"
+MEX_bancomer_desc: ""
+MEX_lowering_high_interest_rates: "Lowering High Interest Rates"
+MEX_lowering_high_interest_rates_desc: ""
+MEX_debt_relief: "Debt Relief"
+MEX_debt_relief_desc: ""
+MEX_gaining_the_peoples_trust: "Gaining the Peoples Trust"
+MEX_gaining_the_peoples_trust_desc: ""
+MEX_empowering_the_bankers: "Empowering the Bankers"
+MEX_empowering_the_bankers_desc: ""
+MEX_becoming_an_investment_hub: "Becoming an Investment Hub"
+MEX_becoming_an_investment_hub_desc: ""
+MEX_mexican_health_care: "Mexican Health Care"
+MEX_mexican_health_care_desc: ""
+MEX_imss: "IMSS"
+MEX_imss_desc: ""
+MEX_private_health_care: "Private Health Care"
+MEX_private_health_care_desc: ""
+MEX_pharmaceutical_production: "Pharmaceutical Production"
+MEX_pharmaceutical_production_desc: ""
+MEX_better_medical_facilities: "Better Medical Facilities"
+MEX_better_medical_facilities_desc: ""
+MEX_expansion_of_medical_laboratories: "Expansion of Medical Laboratories"
+MEX_expansion_of_medical_laboratories_desc: ""
+MEX_increase_of_government_funding: "Increase of Government Funding"
+MEX_increase_of_government_funding_desc: ""
+MEX_healthcare_for_everyone: "Healthcare for Everyone"
+MEX_healthcare_for_everyone_desc: ""
+MEX_medical_tourism: "Medical tourism"
+MEX_medical_tourism_desc: ""
+MEX_mexican_agriculture: "Mexican Agriculture"
+MEX_mexican_agriculture_desc: ""
+MEX_las_pescarias_de_mexico: "Las Pescaderias de Mexico"
+MEX_las_pescarias_de_mexico_desc: ""
+MEX_pescado_de_plancha: "Pescado de Plancha"
+MEX_pescado_de_plancha_desc: ""
+MEX_apealing_to_the_local_farmers: "Apealing to the Local Farmers"
+MEX_apealing_to_the_local_farmers_desc: ""
+MEX_avocado_toast: "Avocado Toast"
+MEX_avocado_toast_desc: ""
+MEX_papas: "Papas"
+MEX_papas_desc: ""
+MEX_azucar: "Azúcar"
+MEX_azucar_desc: ""
+MEX_industrializing_the_farms: "Industrializing the Farms"
+MEX_industrializing_the_farms_desc: ""
+MEX_rancheros: "Rancheros"
+MEX_rancheros_desc: ""
+MEX_carne_asada: "Carne Asada"
+MEX_carne_asada_desc: ""
+MEX_el_chorizo: "El Chorizo"
+MEX_el_chorizo_desc: ""
+MEX_informal_sectors: "Informal Sectors"
+MEX_informal_sectors_desc: ""
+MEX_easing_regulation: "Easing Regulation"
+MEX_easing_regulation_desc: ""
+MEX_cracking_down: "Cracking Down"
+MEX_cracking_down_desc: ""
+MEX_tax_cuts: "Tax Cuts"
+MEX_tax_cuts_desc: ""
+MEX_helping_hand_to_business_owners: "Helping Hand to Business Owners"
+MEX_helping_hand_to_business_owners_desc: ""
+MEX_dealing_with_maquiladoras: "Dealing With Maquiladoras"
+MEX_dealing_with_maquiladoras_desc: ""
+MEX_increase_of_vocational_training: "Increase of Vocational Training"
+MEX_increase_of_vocational_training_desc: ""
+MEX_merging_small_businesses: "Merging Small Businesses"
+MEX_merging_small_businesses_desc: ""
+MEX_the_end_of_informal_businesses: "The End of Informal Businesses"
+MEX_the_end_of_informal_businesses_desc: ""
+
+
+### MEXICAN INDUSTRY ###
+
+MEX_industria_mexicana: "Industria Mexicana"
+MEX_industria_mexicana_desc: ""
+MEX_oil_and_gas_sector: "Oil and Gas Sector"
+MEX_oil_and_gas_sector_desc: ""
+MEX_foreign_oil_investments: "Foreign Oil Investments"
+MEX_foreign_oil_investments_desc: ""
+MEX_shell_ventures: "Shell Ventures"
+MEX_shell_ventures_desc: ""
+MEX_renewable_energy_investments: "Renewable Energy Investments"
+MEX_renewable_energy_investments_desc: ""
+MEX_leasing_rigs: "Leasing Rigs"
+MEX_leasing_rigs_desc: ""
+MEX_baja_california_plant: "Baja California Plant"
+MEX_baja_california_plant_desc: ""
+MEX_ku_maloob_zaap_field: "Ku-Maloob-Zaap Field"
+MEX_ku_maloob_zaap_field_desc: ""
+MEX_tc_energy_ventures: "TC Energy Ventures"
+MEX_tc_energy_ventures_desc: ""
+MEX_ownership_of_ramal_tula: "Ownership of Ramal Tula"
+MEX_ownership_of_ramal_tula_desc: ""
+MEX_south_east_gateway: "South East Gateway"
+MEX_south_east_gateway_desc: ""
+MEX_energy_investments: "Energy Investments"
+MEX_energy_investments_desc: ""
+MEX_exxon_ventures: "Exxon Ventures"
+MEX_exxon_ventures_desc: ""
+MEX_american_businesses: "American Businesses"
+MEX_american_businesses_desc: ""
+MEX_nuevo_leon_plant: "Nuevo Leon Plant"
+MEX_nuevo_leon_plant_desc: ""
+MEX_american_oil_deal: "American Oil Deal"
+MEX_american_oil_deal_desc: ""
+MEX_investments_into_pemex: "Investments into Pemex"
+MEX_investments_into_pemex_desc: ""
+MEX_ensuring_national_reserves: "Ensuring National Reserves"
+MEX_ensuring_national_reserves_desc: ""
+MEX_deepwater_drilling: "Deepwater Drilling"
+MEX_deepwater_drilling_desc: ""
+MEX_expanding_cantarell_fields: "Expanding Cantarell Fields"
+MEX_expanding_cantarell_fields_desc: ""
+MEX_southern_oil_exploration: "Southern Oil Exploration"
+MEX_southern_oil_exploration_desc: ""
+MEX_boosting_diesel_production: "Boosting Diesel Production"
+MEX_boosting_diesel_production_desc: ""
+MEX_natural_gas_production: "Natural Gas Production"
+MEX_natural_gas_production_desc: ""
+MEX_minas_en_mexico: "Minas en Mexico"
+MEX_minas_en_mexico_desc: ""
+MEX_government_investments: "Government Investments"
+MEX_government_investments_desc: ""
+MEX_improving_miner_conditions: "Improving Miner Conditions"
+MEX_improving_miner_conditions_desc: ""
+MEX_combating_illegal_mining: "Combating Illegal Mining"
+MEX_combating_illegal_mining_desc: ""
+MEX_mining_technology_development: "Mining Technology Development"
+MEX_mining_technology_development_desc: ""
+MEX_la_platosa_mine: "La Platosa Mine"
+MEX_la_platosa_mine_desc: ""
+MEX_la_negra_mine: "La Negra Mine"
+MEX_la_negra_mine_desc: ""
+MEX_los_filos_mine: "Los Filos Mine"
+MEX_los_filos_mine_desc: ""
+MEX_el_chanate: "El Chanate"
+MEX_el_chanate_desc: ""
+MEX_morelos_mine: "Morelos Mine"
+MEX_morelos_mine_desc: ""
+MEX_mulatos_gold_mine: "Mulatos Gold Mine"
+MEX_mulatos_gold_mine_desc: ""
+MEX_camino_rojo_mine: "Camino Rojo Mine"
+MEX_camino_rojo_mine_desc: ""
+MEX_la_colorada_mine: "La Colorada Mine"
+MEX_la_colorada_mine_desc: ""
+MEX_penasquito_mine: "Penasquito Mine"
+MEX_penasquito_mine_desc: ""
+MEX_energy_alternatives: "Energy Alternatives"
+MEX_energy_alternatives_desc: ""
+MEX_nuclear_energy: "Nuclear Energy"
+MEX_nuclear_energy_desc: ""
+MEX_easing_off_fossil_fuels: "Easing off Fossil Fuels"
+MEX_easing_off_fossil_fuels_desc: ""
+MEX_reutilizing_of_nopal: "Reutilizing of Nopal"
+MEX_reutilizing_of_nopal_desc: ""
+MEX_expanding_laguna_verde_reactors: "Expanding Laguna Verde Reactors"
+MEX_expanding_laguna_verde_reactors_desc: ""
+MEX_building_more_plants: "Building More Plants"
+MEX_building_more_plants_desc: ""
+MEX_building_enrichment_facilities: "Building Enrichment Facilities"
+MEX_building_enrichment_facilities_desc: ""
+MEX_scientific_exchange: "Scientific Exchange"
+MEX_scientific_exchange_desc: ""
+MEX_nuclear_waste_repository: "Nuclear Waste Repository"
+MEX_nuclear_waste_repository_desc: ""
+MEX_streamlined_power_output: "Streamlined Power Output"
+MEX_streamlined_power_output_desc: ""
+MEX_going_green: "Going Green"
+MEX_going_green_desc: ""
+MEX_researching_renewables: "Researching Renewables"
+MEX_researching_renewables_desc: ""
+MEX_encouraging_hydropower: "Encouraging Hydropower"
+MEX_encouraging_hydropower_desc: ""
+MEX_biomass_plants: "Biomass Plants"
+MEX_biomass_plants_desc: ""
+MEX_solar_power_farms: "Solar Power Farms"
+MEX_solar_power_farms_desc: ""
+MEX_wind_power_farms: "Wind Power Farms"
+MEX_wind_power_farms_desc: ""
+MEX_geo_thermal_plants: "Geo Thermal Plants"
+MEX_geo_thermal_plants_desc: ""
+MEX_expanding_solar_power_farms: "Expanding Solar Power Farms"
+MEX_expanding_solar_power_farms_desc: ""
+MEX_expanding_biomass_plants: "Expanding Biomass Plants"
+MEX_expanding_biomass_plants_desc: ""
+MEX_constructing_energy_storage_facilities: "Constructing Energy Storage Facilities"
+MEX_constructing_energy_storage_facilities_desc: ""
+MEX_expansion_of_wind_farms: "Expansion of Wind Farms"
+MEX_expansion_of_wind_farms_desc: ""
+MEX_geo_thermal_plant_expansion: "Geo Thermal Plant Expansion"
+MEX_geo_thermal_plant_expansion_desc: ""
+MEX_verde_mexico: "Verde Mexico"
+MEX_verde_mexico_desc: ""
 
 
 
