--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1629,7 +1629,7 @@
  recalculate_coalition_support_taiwan: "Update Total Support Values"
 
  southwest_hydroelectricity_dev_category: "Hydroelectricity development in Southwest"
- southwest_hydroelectricity_dev_category_desc: "Due to the relatively lagging regional economic development, my country's southwest energy resources are not fully developed overall, especially the abundant hydropower resources."
+ southwest_hydroelectricity_dev_category_desc: "Due to the relatively lagging regional economic development, China's southwest energy resources are not fully developed overall, especially the abundant hydropower resources."
  construction_jinshajiang_dam: "Construction of Jinsha river hydroelectric power project"
  construction_jinshajiang_dam_desc: "The Jinsha River is located in the upper reaches of the Yangtze River and has abundant water resources. It is very suitable for building water conservancy projects to alleviate our current resource shortage."
  construction_yalongjiang_dam: "Construction of Yalong river hydroelectric power project"
